--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
-html {
-  height: 100%;
-  width: 100%;
+* {
+  margin: 0;
+  padding: 0;
+}
+#sakums {
+  background-color: #E6C4C4;
+}
+#virsraksts{
+  margin-left: 20px;
 }
