Gandrīz pabeidzu pirmo lapu (sākumu)

--- a/style.css
+++ b/style.css
@@ -5,32 +5,36 @@
 #sakums {
   background-color: #E6C4C4;
   height: 30vh;
+  display: flex;
+  justify-content: space-between;
+
 }
 #virsraksts{
   margin-left: 50px;
   color: white;
-  font-size: 89px;
+  font-size: 120px;
+  margin-top: 30px;
 }
 
 #moto{
   margin-left: 53px;
   color: white;
-  font-size: 40px;
+  font-size: 60px;
 }
 
 li{
     display: inline;
   font-size: 32px;
   color: white;
-  margin-right: 20px;
+  margin-right: 60px;
   }
-#kkk{
-  background-color: rgb(255,223,223);
-  margin-top: 25px;
-
-
+ul{
+  margin-top: 15px;
 }
-p{
-  color: rgb(255,223,223)
+#gaisirozais{
+ background-color: rgb(255,232,232);
+  margin-top: 100px;
+  padding-bottom: 400px;
+  margin-right: 250px
 }
 
